# roc

./: Cargo.toml
crates/check/can_solo/: Cargo.toml
crates/check/can_solo/src/: alias.rs  annotation.rs  constraint.rs  declarations.rs  def.rs  desugar.rs  env.rs  exhaustive.rs  expr.rs  ident_ids.rs  interpolation.rs  lib.rs  module.rs  num.rs  pattern.rs  problem.rs  procedure.rs  scope.rs
crates/compiler/can/src/: def.rs  desugar.rs  expr.rs  module.rs  suffixed.rs
crates/compiler/collections/src/: arena_small_string_interner.rs  arena_vec_map.rs  arena_vec_set.rs  lib.rs
crates/compiler/fmt/src/: def.rs  expr.rs
crates/compiler/module/src/: symbol.rs
crates/compiler/parse/src/: ast.rs  expr.rs  normalize.rs
crates/compiler/problem/src/: can.rs
crates/compiler/test_syntax/tests/snapshots/malformed/: tuple_updater_function.expr.roc
crates/compiler/test_syntax/tests/snapshots/pass/: record_updater_function.expr.roc
crates/compiler/types/src/: types.rs
crates/language_server/src/analysis/: tokens.rs
crates/reporting/src/error/: canonicalize.rs
