[package]
name = "roc_can_solo"
description = "Canonicalize a roc module to prepare for typechecking without any knowledge of other modules for maximum cache friendliness."

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# TODO: can we remove any of these?
roc_can.workspace = true
roc_collections.workspace = true
roc_error_macros.workspace = true
roc_exhaustive.workspace = true
roc_module.workspace = true
roc_parse.workspace = true
roc_problem.workspace = true
roc_region.workspace = true
roc_serialize.workspace = true
roc_types.workspace = true
ven_pretty.workspace = true
bitvec.workspace = true
bumpalo.workspace = true
static_assertions.workspace = true
soa.workspace = true

[dev-dependencies]
indoc.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
test_compile.workspace = true
